<resources>
    <string name="app_name">RetailHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EnterYourPromoCode">Enter Your Promo Code</string>
    <string name="TotalAmount">Total amount:</string>
    <string name="Checkout">CHECK OUT</string>
    <string name="AddToFavorites">Add to favorites</string>
    <string name="DeleteFromList">Delete from list</string>
    <string name="YourPromoCodes">Your Promo Codes</string>
    <string name="Apply">Apply</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="Change">Change</string>
    <string name="Payment">Payment</string>
    <string name="CashOnDelivery">"Cash On Delivery (COD) "</string>
    <string name="Promo">Promo</string>
    <string name="PromoCode">Promo Code</string>
    <string name="Order">Order:</string>
    <string name="Discount">Discount:</string>
    <string name="SubmitOrder">SUBMIT ORDER</string>
    <string name="signup">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with_social_account">Or sign up with</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="enter_name">Name</string>
    <string name="or_login_in_with_social_account">Or continue with</string>
    <string name="login">Login</string>
    <string name="web_client_id">820047487372-bh211dcltqq130mtvhdm26qb1ru56eev.apps.googleusercontent.com</string>
    <string name="old_usd"><strike>%.2f $</strike></string>
    <string name="number_usd">%.2f $</string>
    <string name="number_eur">%.2f €</string>
    <string name="number_egp">%.2f جم</string>
    <string name="number_aed">%.2f د.إ</string>
    <string name="number_ksr">%.2f ر.س</string>
    <string name="new_item">New</string>
    <string name="MaximumAmount">Max quality reached</string>
    <string name="Summary">Summary</string>
    <string name="PayWithCard">Pay With Card</string>
    <string name="fashion_sale">Fashion\nSale</string>
    <string name="you_ve_never_seen_it_before">You’ve never seen it before!</string>
    <string name="view_all"><u>View All</u></string>
    <string name="brands">Brands</string>
    <string name="brands_subtitle">Top brands just for you</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="check">Check</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="Success">Success</string>
    <string name="SuccessText">Your order will be delivered soon. Thank you for choosing our app!</string>
    <string name="ContinueShopping">Continue Shopping</string>
    <string name="size">Size:</string>
    <string name="color">Color:</string>
    <string name="reviews">Reviews</string>
    <string name="seemore">See More Reviews</string>
    <string name="reviews_toolbar"><![CDATA[Rating&Reviews]]></string>
    <string name="Edit">Edit</string>
    <string name="ShippingDefaultText">Use as the default address</string>
    <string name="AddToCart">Add To Cart</string>
    <string name="FullName">Full Name</string>
    <string name="Address">Address</string>
    <string name="Appartment">Appartment</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Phone">Phone</string>
    <string name="SaveAddress">Save Address</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DeleteTextConfirmation">Are you sure you want to delete this item ?</string>
    <string name="UseThisLocation">Use this location ?</string>
    <string name="NoAddressesFound">No Addresses Found</string>
    <string name="my_bag">My Bag</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="sizes">Sizes</string>
    <string name="price_range">Price range</string>
    <string name="searchhere">Search here..</string>
    <string name="search">Search</string>
    <string name="currency">EGP</string>
    <string name="NoAddress">No Addresses Found</string>
    <string name="DiscountInvalid">Invalid Discount !!</string>
    <string name="DiscountUsed">Code has been redeemed</string>
    <string name="ErrorName">Please enter a name</string>
    <string name="ErrorAddress">Please enter a detailed address</string>
    <string name="ErrorApartment">Please enter a detailed address</string>
    <string name="ErrorCity">Please enter a valid city</string>
    <string name="ErrorCountry">Please enter a valid country</string>
    <string name="PleaseAddAnAddress">Please add an address to submit your order</string>
    <string name="ErrorPhone">Please enter a valid number</string>
    <string name="my_orders">My Orders</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="promo_codes">Promo codes</string>
    <string name="total">Total:</string>
    <string name="details">Details</string>
    <string name="quantity">Quantity:</string>
    <string name="tracking_number">Tracking Number:</string>
    <string name="delivered">Delivered</string>
    <string name="processing">In Progress</string>
    <string name="paid">Paid</string>
    <string name="Reorder">Reorder</string>
    <string name="payment_status">Payment Status:</string>
    <string name="order_information">Order Information</string>
    <string name="filter">Filters</string>
    <string name="accessories">Accessories</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="price_low_to_high">Price: low to high</string>
    <string name="delete_message">Are you sure you want to delete this product?</string>
    <string name="select_size">Select size</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Language">Language:</string>
    <string name="Currency">Currency:</string>
    <string name="ClickOnAdText">CLICK ME !</string>
    <string name="SearchText">Search for a location</string>
    <string name="sign_in_to_unlock_more_features">Sign in to unlock more features</string>
    <string name="welcome_to_retail_hub">Welcome to Retail Hub</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="sort_by_relevance">Sort by Relevance</string>
    <string name="sort_from_high_price_to_low_price">Sort from high price to low price</string>
    <string name="sort_from_low_price_to_high_price">Sort from low price to high price</string>
    <string name="sort_from_newest_to_oldest">Sort from newest to oldest</string>
    <string name="sort_from_oldest_to_newest">Sort from oldest to newest</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="sort_the_result">Sort the Result</string>
    <string name="loginfirst">Guest User</string>
    <string name="please_login_to_use_this_feature">Please login to use this feature</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product?</string>
</resources>