<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.product_search.view.FilterFragment">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/price_range"
        android:textColor="@color/black_variant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangeSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="EGP"
        android:valueFrom="0"
        android:valueTo="400"
        app:labelBehavior="withinBounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:thumbColor="@color/red_color"
        app:thumbHeight="20dp"
        app:thumbRadius="12dp"
        app:thumbWidth="20dp"
        app:trackColorActive="@color/red_color"
        app:trackColorInactive="@color/grey"
        app:trackHeight="5dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/sizes"
        android:textColor="@color/black_variant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/rangeSlider"
        app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/category"
        android:textColor="@color/black_variant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/chipGroup2"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup2"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/menChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men" />

        <com.google.android.material.chip.Chip
            android:id="@+id/womenChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women" />

        <com.google.android.material.chip.Chip
            android:id="@+id/kidsChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/brands"
        android:textColor="@color/black_variant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup3" />

    <TextView
        android:id="@+id/brandFiltered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_regular"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:text="Brands" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brandsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/discardBtn"
        app:layout_constraintTop_toBottomOf="@+id/brandFiltered"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/metropolis_medium"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/discardBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/discardBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/metropolis_medium"
        android:text="@string/discard"
        android:textColor="@color/black_variant"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/applyBtn"
        app:layout_constraintEnd_toStartOf="@+id/applyBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>