<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/signup"
        android:textColor="@color/signup_black_color"
        android:textSize="30sp"
        android:layout_marginStart="14dp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="110dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passowrdTex"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        android:layout_marginHorizontal="20dp"
        tools:layout_editor_absoluteY="110dp"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginEnd="10dp"
        />

        <ImageView
            android:id="@+id/redArrowGoToLogin"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:src="@drawable/red_right_arrow"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sigInBtn"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@drawable/red_signup_rectangle"
        android:padding="13dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="45dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with_social_account"
        android:textColor="@color/signup_black_color"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="112dp"
            android:layout_height="84dp"
            app:cardCornerRadius="24dp"
            app:cardUseCompatPadding="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/googleCard"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/google_icon"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="112dp"
            android:layout_height="84dp"
            app:cardCornerRadius="24dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/facebookCard"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/facebook_icon"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>